# template_matcher

./: .gitmodules  CMakeLists.txt  application.cpp  application.h  main.cpp  util.cpp  util.h  vutil.cpp  vutil.h
model/: master.cpp  master.h  master_log.cpp  master_log.h  master_thread_worker.cpp  master_thread_worker.h  model.cpp  model.h  plotter.cpp  plotter.h  slave.cpp  slave.h  vision_worker.cpp  vision_worker.h  watcher.cpp  watcher.h
view/: device_navigator.cpp  device_navigator.h  device_view.cpp  device_view.h  master_log_view.cpp  master_log_view.h  view.cpp  view.h  widgets.cpp  widgets.h
